--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,139 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  margin-top: 36px;
+}
+
+.form-control {
+  width: 272px;
+  height: 40px;
+}
+
+button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  background: #4e75ff;
+}
+
+
+
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+#loader {
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.hidden {
+  display: none;
+}
+
+
+
+.loader {
+  width: 32px;
+  height: 32px;
+  position: relative;
+  border-radius: 50%;
+  color: #FF3D00;
+  animation: fill 1s ease-in infinite alternate;
+}
+
+
+.loader::before,
+.loader::after {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  left: 48px;
+  top: 0;
+  animation: fill 0.9s ease-in infinite alternate;
+}
+
+.loader::after {
+  left: auto;
+  right: 48px;
+  animation-duration: 1.1s;
+}
+
+@keyframes fill {
+  0% {
+    box-shadow: 0 0 0 2px inset
+  }
+
+  100% {
+    box-shadow: 0 0 0 10px inset
+  }
+}
+
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  list-style: none;
+  gap: 24px;
+  margin-top: 32px;
+}
+
+
+.gallery-link {
+  width: calc((100% - 48px) / 3);
+}
+
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.inform {
+  display: flex;
+  gap: 28px;
+}
+
+
+.load-more {
+  display: block;
+  margin: 20px auto;
+  padding: 10px 20px;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 125px;
+  height: 40px;
+}
+
+
+
+/* button.load-more{
+  visibility: hidden;
+} */
+
+.button.is-hidden {
+  display: none;
+}
+
+.button>.spinner.is-hidden {
+  display: none;
+}
